[gd_scene load_steps=6 format=3 uid="uid://0he5atjrxmqm"]

[ext_resource type="Script" uid="uid://bmys4i7dau5ng" path="res://UserInterface/victory_layer.gd" id="1_6k6vd"]
[ext_resource type="FontFile" uid="uid://b05o15mwhok7s" path="res://Assets/Asap/static/Asap-Bold.ttf" id="2_o6yni"]
[ext_resource type="Texture2D" uid="uid://bl3g3hb0gl4j2" path="res://star.png" id="2_rt5eh"]

[sub_resource type="Theme" id="Theme_3qhxs"]
default_font = ExtResource("2_o6yni")

[sub_resource type="LabelSettings" id="LabelSettings_veim5"]
font_size = 96

[node name="VictoryLayer" type="CanvasLayer"]
script = ExtResource("1_6k6vd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3qhxs")

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Victory"
label_settings = SubResource("LabelSettings_veim5")
horizontal_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="star" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_rt5eh")
expand_mode = 2
stretch_mode = 5

[node name="star2" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_rt5eh")
expand_mode = 2
stretch_mode = 5

[node name="star3" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_rt5eh")
expand_mode = 2
stretch_mode = 5

[node name="SurvivedLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Survived + 1"
horizontal_alignment = 1

[node name="HealthLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Full Health + 1"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "money money money + 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Retry
"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Quit
"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
